--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-TITLE: N Back for Children
-DETAIL: MATLAB psychtoolbox implementaion of N back test for fMRI testing use.
+Title: N Back for Children
+Detail: MATLAB psychtoolbox implementaion of N back test for fMRI testing use.
 Author: Liang Zhang <psychelzh@gmail.com>
         Yu Zhou <zhouyu0206@126.com>
         Peixuan Li <1214268412@qq.com>
-Version: 0.0.1
+Version: 0.0.2
